# manipulation

./: .gitignore  README.md  csh  repos.yml
docker/: .env  Dockerfile  build  docker-compose.yaml
docker/profiles/: dev.yml
manipulation_apps/: package.xml  setup.cfg  setup.py
manipulation_apps/manipulation_apps/: gripper.py  pick_and_place.py  pick_and_place_demo.py  utils.py
manipulation_interfaces/: CMakeLists.txt  package.xml
manipulation_interfaces/action/: PickObject.action  PlaceObject.action
manipulation_interfaces/srv/: FindObject.srv  FindObjects.srv
manipulation_perception/: package.xml  setup.cfg  setup.py
manipulation_perception/manipulation_perception/: camera_joint_state_publisher.py  falcon_segmentation.py  object_finder.py  object_segmentation_node.py  owlv2_sam2_segmentor.py  plane_fitting.py  prompt_to_segment.py  sam2_segmentor.py  sam3_segmentor.py  tag_detection.py  test_inference.py  test_sam3_baseline.py  test_segmentation.py  transform_math.py  ultralytics_segmentor.py  vision_banana.py
manipulation_servers/: package.xml  setup.cfg  setup.py
manipulation_servers/launch/: servers.launch.py
manipulation_servers/manipulation_servers/: object_finder_server.py  objects_finder_server.py  pick_server.py  place_server.py
